<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.activities.LoginActivity">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/picture_login"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:layout_margin="30dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLoginEmailadres"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:startIconDrawable="@drawable/ic_account"
        app:startIconTint="@color/colorAccent"
        android:hint="@string/placeholder_email"
        android:textColorHint="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        app:counterTextColor="@color/colorAccent"
        android:theme="@style/ChangePointerColorWhite"
        app:cornerRadius="25dp"
        app:errorTextColor="@color/colorError"
        app:errorIconTint="@color/colorError"
        app:boxStrokeErrorColor="@color/colorError"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:ems="15"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLoginPassword"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/colorAccent"
        android:hint="@string/placeholder_password"
        android:textColorHint="@color/colorAccent"
        android:textCursorDrawable="@drawable/shape_cursor"
        android:theme="@style/ChangePointerColorWhite"
        app:boxStrokeColor="@color/colorAccent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent"
        app:counterTextColor="@color/colorAccent"
        app:errorTextColor="@color/colorError"
        app:errorIconTint="@color/colorError"
        app:boxStrokeErrorColor="@color/colorError"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="25dp"
            android:ems="15"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/roboto_medium"
        android:ems="8"
        app:cornerRadius="25dp"
        android:text="@string/login_button"
        android:letterSpacing="0"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_account_link"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textColor="@color/colorAccent"
        />


</LinearLayout>